# danggen

./: .gitignore  README.md  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: e2e-tests.yml
.taskmaster/: config.json  state.json
.taskmaster/tasks/: tasks.json
api_clients/: __init__.py  auth_manager.py  base_client.py  carrot_api.py  chat_client.py  community_client.py  models.py  product_client.py  user_client.py
config/: .token_key  __init__.py  api_config.py  env.example
pages/: __init__.py  base_page.py  chat_page.py  community_page.py  home_page.py  login_page.py  product_detail_page.py
scripts/: complete.md  prd.md  to-do-list.md
tests/: __init__.py  conftest.py  test_community_flow.py  test_edge_cases.py  test_marketplace_flow.py  test_sample.py
utils/: __init__.py  mobile_driver.py
